fix: .mv__beforeにposition:relative+z-index:50を設定して郵便番号フォームの上に配置

--- a/lp/css/style.css
+++ b/lp/css/style.css
@@ -1825,6 +1825,8 @@ button {
     align-items: flex-start;
     justify-content: flex-start;
     min-width: 0;
+    position: relative;
+    z-index: 50;
   }
 
   .mv .mv__before__tit {
